package bvc.extractor;

public interface CicloVida {
    void abrir();
    void cerrar();
}
