package bvc.extractor;

public interface Diseminador {
    void grabar(String linea);
}
