package bvc.extractor;

import java.util.Map;

public interface Formateador {
    String formatear(Map<String, Object> registro);
}
